test_outputs/connlist/cudn_test_6_connlist_output.txt
Permitted connectivity analyzed in Pod network:
0.0.0.0-255.255.255.255[External] => default/app-default[StatefulSet] : All Connections
default/app-default[StatefulSet] => 0.0.0.0-255.255.255.255[External] : All Connections

Permitted connectivity analyzed in primary CUDN colored-bg:
0.0.0.0-255.255.255.255[External] => green/app-green[StatefulSet] : All Connections
blue/app-blue[StatefulSet] => green/app-green[StatefulSet] : TCP 9090
green/app-green[StatefulSet] => 0.0.0.0-255.255.255.255[External] : All Connections
green/app-green[StatefulSet] => blue/app-blue[StatefulSet] : TCP 8000

Permitted connectivity analyzed in primary CUDN colored-ry:
0.0.0.0-255.255.255.255[External] => red/app-red[StatefulSet] : All Connections
0.0.0.0-255.255.255.255[External] => yellow/app-yellow[StatefulSet] : All Connections
red/app-red[StatefulSet] => yellow/app-yellow[StatefulSet] : TCP 8080
yellow/app-yellow[StatefulSet] => 0.0.0.0-255.255.255.255[External] : All Connections
yellow/app-yellow[StatefulSet] => red/app-red[StatefulSet] : All Connections

Workload-to-Networks Mapping:
blue/app-blue[StatefulSet]: 
	Primary Network: colored-bg[CUDN]
default/app-default[StatefulSet]: 
	Primary Network: pod_network
green/app-green[StatefulSet]: 
	Primary Network: colored-bg[CUDN]
red/app-red[StatefulSet]: 
	Primary Network: colored-ry[CUDN]
yellow/app-yellow[StatefulSet]: 
	Primary Network: colored-ry[CUDN]
