test_outputs/connlist/cudn_test_6_explain_output.txt

#####################################################################
# Specific connections and their reasons in primary CUDN colored-bg #
#####################################################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => blue/app-blue[StatefulSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'blue/allow-to-all-pods' selects blue/app-blue[StatefulSet], but 0.0.0.0-255.255.255.255[External] is not allowed by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between blue/app-blue[StatefulSet] => 0.0.0.0-255.255.255.255[External]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'blue/allow-to-all-pods' selects blue/app-blue[StatefulSet], but 0.0.0.0-255.255.255.255[External] is not allowed by any Egress rule
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between blue/app-blue[StatefulSet] => green/app-green[StatefulSet]:

Allowed connections:
	Allowed TCP:[9090] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'blue/allow-to-all-pods' allows connections by Egress rule #1
		Ingress (Allowed) due to the system default (Allow all)

Denied connections:
	Denied TCP:[1-9089,9091-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'blue/allow-to-all-pods' selects blue/app-blue[StatefulSet], and Egress rule #1 selects green/app-green[StatefulSet], but the protocols and ports do not match
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green/app-green[StatefulSet] => blue/app-blue[StatefulSet]:

Allowed connections:
	Allowed TCP:[8000] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'blue/allow-to-all-pods' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-7999,8001-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'blue/allow-to-all-pods' selects blue/app-blue[StatefulSet], and Ingress rule #1 selects green/app-green[StatefulSet], but the protocols and ports do not match


#####################################################################
# Specific connections and their reasons in primary CUDN colored-ry #
#####################################################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between red/app-red[StatefulSet] => 0.0.0.0-255.255.255.255[External]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'red/allow-to-all-pods' selects red/app-red[StatefulSet], but 0.0.0.0-255.255.255.255[External] is not allowed by any Egress rule
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between red/app-red[StatefulSet] => yellow/app-yellow[StatefulSet]:

Allowed connections:
	Allowed TCP:[8080] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'red/allow-to-all-pods' allows connections by Egress rule #1
		Ingress (Allowed) due to the system default (Allow all)

Denied connections:
	Denied TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'red/allow-to-all-pods' selects red/app-red[StatefulSet], and Egress rule #1 selects yellow/app-yellow[StatefulSet], but the protocols and ports do not match
		Ingress (Allowed) due to the system default (Allow all)


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255[External] => default/app-default[StatefulSet]    (in network: pod_network)
0.0.0.0-255.255.255.255[External] => green/app-green[StatefulSet]    (in network: colored-bg)
0.0.0.0-255.255.255.255[External] => red/app-red[StatefulSet]    (in network: colored-ry)
0.0.0.0-255.255.255.255[External] => yellow/app-yellow[StatefulSet]    (in network: colored-ry)
default/app-default[StatefulSet] => 0.0.0.0-255.255.255.255[External]    (in network: pod_network)
green/app-green[StatefulSet] => 0.0.0.0-255.255.255.255[External]    (in network: colored-bg)
yellow/app-yellow[StatefulSet] => 0.0.0.0-255.255.255.255[External]    (in network: colored-ry)
yellow/app-yellow[StatefulSet] => red/app-red[StatefulSet]    (in network: colored-ry)

*** Note: Connections between any peers from separate isolated networks are denied by default and therefore not listed in this report.
